--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <script>
       const hideFullScreenButton = "";
       const buildUrl = "Build";
-      const loaderUrl = buildUrl + "/WebGL_trans_scaler_500_400_Cst.loader.js";
+      const loaderUrl = buildUrl + "/modelviewer.loader.js";
       const config = {
-        dataUrl: buildUrl + "/WebGL_trans_scaler_500_400_Cst.data.unityweb",
-        frameworkUrl: buildUrl + "/WebGL_trans_scaler_500_400_Cst.framework.js.unityweb",
-        codeUrl: buildUrl + "/WebGL_trans_scaler_500_400_Cst.wasm.unityweb",
+        dataUrl: buildUrl + "/modelviewer.data.unityweb",
+        frameworkUrl: buildUrl + "/modelviewer.framework.js.unityweb",
+        codeUrl: buildUrl + "/modelviewer.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Perspective",
         productName: "XR-Square",
